# DicomBrowse

./: .gitattributes  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/include/dcmtk/config/: arith.h  osconfig.h
app/src/main/: AndroidManifest.xml
app/src/main/assets/: img01.dcm
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/allin/dicom/: Utils.java
app/src/main/java/com/allin/dicomlib/: DcmData.java  FileLib.java
app/src/main/java/com/lsp/myapplication/: DcmBean.java  MainActivity.java  MyActivity.java  PushToImebraPipe.java
app/src/main/java/com/lsp/myapplication/photoview/: Compat.java  CustomGestureDetector.java  OnGestureListener.java  OnMatrixChangedListener.java  OnOutsidePhotoTapListener.java  OnPhotoTapListener.java  OnScaleChangedListener.java  OnSingleFlingListener.java  PhotoView.java  PhotoViewAttacher.java  Util.java
app/src/main/java/com/tangzy/dicom/: MainActivity.java  Utils.java
app/src/main/java/com/tangzy/dicomlib/: DcmData.java  FileLib.java
app/src/main/java/org/dcm4che3/android/: Raster.java  RasterUtil.java  Transparency.java
app/src/main/java/org/dcm4che3/android/image/: ByteLookupTable.java  ColorSubsampling.java  LookupTable.java  LookupTableFactory.java  Overlays.java  PhotometricInterpretation.java  PixelAspectRatio.java  ShortLookupTable.java  StoredValue.java  YBR.java
app/src/main/java/org/dcm4che3/android/imageio/codec/: CoerceAttributes.java  ImageParams.java  TransferSyntaxType.java
app/src/main/java/org/dcm4che3/android/imageio/dicom/: DicomImageReadParam.java  DicomImageReader.java  DicomMetaData.java
app/src/main/java/org/dcm4che3/android/imageio/stream/: ImageInputStreamAdapter.java  OutputStreamAdapter.java  SegmentedImageInputStream.java
app/src/main/java/org/dcm4che3/android/stream/: FileImageInputStream.java  FileImageOutputStream.java  IIOByteBuffer.java  ImageInputStream.java  ImageInputStreamImpl.java  ImageOutputStream.java  ImageOutputStreamImpl.java  MemoryCache.java  MemoryCacheImageInputStream.java  MemoryCacheImageOutputStream.java
app/src/main/java/org/dcm4che3/data/: Attributes.java  BinaryValueType.java  BulkData.java  Code.java  DatePrecision.java  DatePrecisions.java  DateRange.java  ElementDictionary.java  Fragments.java  IDWithIssuer.java  IOD.java  IODCache.java  Implementation.java  Issuer.java  ItemPointer.java  Keyword.java  PersonName.java  Sequence.java  SequenceValueType.java  SpecificCharacterSet.java  StandardElementDictionary.java  StringValueType.java  Tag.java  TemporalType.java  UID.java  VR.java  ValidationResult.java  Value.java  ValueSelector.java  ValueType.java
app/src/main/java/org/dcm4che3/emf/: HashUIDMapper.java  MultiframeExtractor.java  NumberOfFramesAccessor.java  UIDMapper.java
app/src/main/java/org/dcm4che3/io/: BulkDataDescriptor.java  ContentHandlerAdapter.java  DicomEncodingOptions.java  DicomInputHandler.java  DicomInputStream.java  DicomOutputStream.java  DicomStreamException.java  RAFInputStreamAdapter.java  RAFOutputStreamAdapter.java  SAXReader.java  SAXTransformer.java  SAXWriter.java  TemplatesCache.java
app/src/main/java/org/dcm4che3/media/: DicomDirReader.java  DicomDirWriter.java  RecordFactory.java  RecordType.java
app/src/main/java/org/dcm4che3/util/: AttributesFormat.java  Base64.java  ByteUtils.java  DateUtils.java  IntHashMap.java  Property.java  ResourceLocator.java  SafeClose.java  StreamUtils.java  StringUtils.java  TagUtils.java  UIDUtils.java
app/src/main/res/layout/: activity_main.xml  main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
